--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
     </head>
         <body>
-            <h1> <h1>
+            <h1> Ahoj <h1>
             <p>Ahoj.</p>
         </body>
 </html>
