--- a/project.html
+++ b/project.html
@@ -3,11 +3,11 @@
 
     </head>
         <body>
-<<<<<<< HEAD
             <h5>restaurace</h5>
-=======
-           
-            <p>Ahoj.</p>
+            <h1>Cara-nar</h1>
+            <section>
+                
+            </section>
         </body>
    <footer>
 
