--- a/project.html
+++ b/project.html
@@ -1,15 +1,18 @@
 <html>
-    <head>
 
-    </head>
-        <body>
-            <h5>restaurace</h5>
-            <h1>Cara-nar</h1>
-            <section>
-                
-            </section>
-        </body>
-   <footer>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+</head>
+
+<body>
+    <h5>restaurace</h5>
+    <h1>Cara-nar</h1>
+    <section>
+
+    </section>
+</body>
+<footer>
 
 </footer>
+
 </html>
