--- a/project.html
+++ b/project.html
@@ -6,11 +6,22 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <title>objednej si jídlo</title>
+
+    <header>
+        <nav class="container navbar flex-colum flex-sm-row">
+            <a href="#onas">O nás</a>
+            <a href="#objednavka">objednávka</a>
+            <a href="#kontakty">kontakty</a>
+            <a href="#kosik">košík</a>
+
+        </nav>
+    </header>
 </head>
 
 <body>
     <h5>restaurace</h5>
     <h1>Cara-nar</h1>
+
     <section class="onas">
         <div class="container">
             <h2> O nás </h2>
