--- a/project.html
+++ b/project.html
@@ -10,6 +10,9 @@
     <header>
         <nav class="container navbar flex-colum flex-sm-row">
             <a href="#onas">O nás</a>
+            <a href="#objednavka">Objednávka</a>
+            <a href="#kontakty">Kontakty</a>
+            <a href="#kosik">Košík</a>
 
         </nav>
     </header>
