--- a/project.html
+++ b/project.html
@@ -27,6 +27,22 @@
             <h2> O nás </h2>
         </div>
     </section>
+
+
+
+    <section class="objednavka">
+        <div class="container">
+            <h2> Objednávka</h2>
+        </div>
+    </section>
+
+    <section class="kontakty">
+        <div class="container">
+            <h2> Kontakty</h2>
+        </div>
+    </section>
+
+
 </body>
 
 
