--- a/project.html
+++ b/project.html
@@ -22,11 +22,14 @@
     <h5>restaurace</h5>
     <h1>Cara-nar</h1>
 
-    <section class="onas">
-        <div class="container">
+    <section class="onas bg-info text-dark ">
+        <div class="container ">
             <h2> O nás </h2>
         </div>
     </section>
+
+
+
 
 
 
