--- a/project.html
+++ b/project.html
@@ -33,14 +33,14 @@
 
 
 
-    <section class="objednavka">
-        <div class="container">
+    <section class="objednavka bg-info text-dark">
+        <div class=" container ">
             <h2> Objednávka</h2>
         </div>
     </section>
 
-    <section class="kontakty">
-        <div class="container">
+    <section class="kontakty  bg-info text-dark ">
+        <div class=" container ">
             <h2> Kontakty</h2>
         </div>
     </section>
