--- a/project.html
+++ b/project.html
@@ -29,14 +29,16 @@
     </section>
 
 
-
-
-
-
     <section class="objednavka bg-info text-dark">
         <div class=" container ">
             <h2> Objednávka</h2>
         </div>
+        <div class="person col-md">
+            <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
+            <h3>Salát s kuřecím masem</h3>
+            <p></p>
+        </div>
+
     </section>
 
     <section class="kontakty  bg-info text-dark ">
