--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="js/javascript.js"></script>
     <title>Objednej si jídlo</title>
 
     <header>
@@ -33,12 +34,13 @@
         <div class=" container ">
             <h2> Objednávka</h2>
         </div>
+
         <div class="person col-md">
             <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
             <h3>Salát s kuřecím masem</h3>
             <p></p>
         </div>
-
+        <button onclick="pridatZbozi()"> + </button>
     </section>
 
     <section class="kontakty  bg-info text-dark ">
