--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="js/javascript.js"></script>
-
+    <link rel="stylesheet" href="css/style.css">
     <title>Objednej si jídlo</title>
 
     <header>
@@ -50,6 +50,19 @@
                             <p></p>
                         </div>
                         <button onclick="pridatZbozi()"> + </button>
+
+                        <div class="person col-md">
+                            <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
+                            <h3>Svíčková na smetaně</h3>
+                            <p></p>
+                        </div>
+
+                        <div class="person col-md">
+                            <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
+                            <h3>Kuřecí řízek Ondráš</h3>
+                            <p></p>
+                        </div>
+
                     </section>
 
 
