--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -17,62 +17,69 @@
             <a href="#kosik">Košík</a>
 
         </nav>
+
     </header>
+
 </head>
 
 <body>
     <h5>restaurace</h5>
     <h1>Cara-nar</h1>
 
-
+    <a name="onas" />
     <section class="onas bg-info text-dark ">
         <div class="container ">
 
-            <section class="onas">
-                <div class="container">
 
-                    <h2> O nás </h2>
-                </div>
-            </section>
+            <h2> O nás </h2>
+        </div>
 
+    </section>
 
-            <section class="objednavka bg-info text-dark">
-                <div class=" container ">
-                    <section class="objednavka">
-                        <div class="container">
+    <a name="objednavka" />
+    <section class="objednavka bg-info text-dark">
+        <div class=" container ">
 
-                            <h2> Objednávka</h2>
-                        </div>
+            <div class="row">
+                <h2> Objednávka</h2>
+            </div>
 
-                        <div class="person col-md">
-                            <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
-                            <h3>Salát s kuřecím masem</h3>
-                            <p></p>
-                        </div>
-                        <button onclick="pridatZbozi()"> + </button>
-
-                        <div class="person col-md">
-                            <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
-                            <h3>Svíčková na smetaně</h3>
-                            <p></p>
-                        </div>
-
-                        <div class="person col-md">
-                            <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
-                            <h3>Kuřecí řízek Ondráš</h3>
-                            <p></p>
-                        </div>
-
-                    </section>
+            <div class="person col-md">
+                <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
+                <h3>Salát s kuřecím masem</h3>
+                <p></p>
+            </div>
+            <button onclick="pridatZbozi()"> + </button>
 
 
+            <div class="person col-md">
+                <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
+                <h3>Svíčková na smetaně</h3>
+                <p></p>
+            </div>
+
+            <div class="person col-md">
+                <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
+                <h3>Kuřecí řízek Ondráš</h3>
+                <p></p>
+            </div>
+
+            <div class="person col-md">
+                <img src="img/boloňské špagety.jpg" alt=" boloňské špagety " />
+                <h3>Boloňské špagety</h3>
+                <p></p>
+            </div>
+
+    </section>
 
 
-                    <section class="kontakty">
-                        <div class="container">
-                            <h2> Kontakty</h2>
-                        </div>
-                    </section>
+    <a name="kontakty" />
+
+    <section class="kontakty">
+        <div class="container">
+            <h2> Kontakty</h2>
+        </div>
+    </section>
 
 
 </body>
