--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -71,6 +71,36 @@
                 <p></p>
             </div>
             <h3>Nápoje</h3>
+
+            <div class="person col-md">
+                <img src="img/cola.jpg" alt=" cola " />
+                <h5>Coca cola</h5>
+                <p></p>
+            </div>
+
+            <div class="person col-md">
+                <img src="img/cola v plechovce.jpg" alt=" cola v plechovce " />
+                <h5>Coca cola</h5>
+                <p></p>
+            </div>
+
+            <div class="person col-md">
+                <img src="img/voda.jpg" alt=" voda " />
+                <h5>Dobrá voda</h5>
+                <p></p>
+            </div>
+
+            <div class="person col-md">
+                <img src="img/pivo v lahvi.jpg" alt=" pivo " />
+                <h5>Pilsner Urquell</h5>
+                <p></p>
+            </div>
+
+            <div class="person col-md">
+                <img src="img/icecoffe.jpg" alt=" icecoffe " />
+                <h5>Icecoffe</h5>
+                <p></p>
+            </div>
     </section>
 
 
