--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -10,11 +10,11 @@
     <title>Objednej si jídlo</title>
 
     <header>
-        <nav class="container navbar flex-colum flex-sm-row">
-            <a href="#onas">O nás</a>
-            <a href="#objednavka">Objednávka</a>
-            <a href="#kontakty">Kontakty</a>
-            <a href="#kosik">Košík</a>
+        <nav class="container navbar fixed-top flex-colum flex-sm-row bg-light">
+            <a href=" #onas ">O nás</a>
+            <a href="#objednavka ">Objednávka</a>
+            <a href="#kontakty ">Kontakty</a>
+            <a href="#kosik ">Košík</a>
 
         </nav>
 
@@ -26,7 +26,7 @@
     <h5>restaurace</h5>
     <h1>Cara-nar</h1>
 
-    <a name="onas" />
+    <a name="onas " />
     <section class="onas bg-info text-dark ">
         <div class="container ">
 
@@ -36,78 +36,78 @@
 
     </section>
 
-    <a name="objednavka" />
-    <section class="objednavka bg-info text-dark">
+    <a name="objednavka " />
+    <section class="objednavka bg-info text-dark ">
         <div class=" container ">
 
-            <div class="row">
+            <div class="row ">
                 <h2> Objednávka</h2>
             </div>
             <h3>Jídla</h3>
 
-            <div class="person col-md">
-                <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
+            <div class="person col-md ">
+                <img src="img/salát s kuřecím masem.jpg " alt=" salát s kuřecím masem " />
                 <h5>Salát s kuřecím masem</h5>
                 <p></p>
             </div>
-            <button onclick="pridatZbozi()"> + </button>
+            <button onclick="pridatZbozi() "> + </button>
 
 
-            <div class="person col-md">
-                <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
+            <div class="person col-md ">
+                <img src="img/svickova-na-smetane.jpg " alt=" svíčková na smetaně " />
                 <h5>Svíčková na smetaně</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md">
-                <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
+            <div class="person col-md ">
+                <img src="img/kuřecí řízek Ondráš.jpg " alt=" kuřecí řízek ondráš " />
                 <h5>Kuřecí řízek Ondráš</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md">
-                <img src="img/boloňské špagety.jpg" alt=" boloňské špagety " />
+            <div class="person col-md ">
+                <img src="img/boloňské špagety.jpg " alt=" boloňské špagety " />
                 <h5>Boloňské špagety</h5>
                 <p></p>
             </div>
             <h3>Nápoje</h3>
 
-            <div class="person col-md">
-                <img src="img/cola.jpg" alt=" cola " />
+            <div class="person col-md ">
+                <img src="img/cola.jpg " alt=" cola " />
                 <h5>Coca cola</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md">
-                <img src="img/cola v plechovce.jpg" alt=" cola v plechovce " />
+            <div class="person col-md ">
+                <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
                 <h5>Coca cola</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md">
-                <img src="img/voda.jpg" alt=" voda " />
+            <div class="person col-md ">
+                <img src="img/voda.jpg " alt=" voda " />
                 <h5>Dobrá voda</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md">
-                <img src="img/pivo v lahvi.jpg" alt=" pivo " />
+            <div class="person col-md ">
+                <img src="img/pivo v lahvi.jpg " alt=" pivo " />
                 <h5>Pilsner Urquell</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md">
-                <img src="img/icecoffe.jpg" alt=" icecoffe " />
+            <div class="person col-md ">
+                <img src="img/icecoffe.jpg " alt=" icecoffe " />
                 <h5>Icecoffe</h5>
                 <p></p>
             </div>
     </section>
 
 
-    <a name="kontakty" />
+    <a name="kontakty " />
 
-    <section class="kontakty">
-        <div class="container">
+    <section class="kontakty ">
+        <div class="container ">
             <h2> Kontakty</h2>
         </div>
     </section>
