--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -40,67 +40,100 @@
     <section class="objednavka bg-info text-dark ">
         <div class=" container ">
 
-            <div class="row ">
-                <h2> Objednávka</h2>
-            </div>
-            <h3>Jídla</h3>
-
-            <div class="person col-md ">
-                <img src="img/salát s kuřecím masem.jpg " alt=" salát s kuřecím masem " />
-                <h5>Salát s kuřecím masem</h5>
-                <p></p>
-            </div>
-            <button onclick="pridatZbozi() "> + </button>
+            <h2> Objednávka</h2>
+        </div>
+        <h3>Jídla</h3>
+        <div class="card-columns col-md bg-info">
+            <br/>
+            <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
 
 
-            <div class="person col-md ">
-                <img src="img/svickova-na-smetane.jpg " alt=" svíčková na smetaně " />
-                <h5>Svíčková na smetaně</h5>
-                <p></p>
-            </div>
+            <h5>Salát s kuřecím masem</h5>
+            <p>Zelenina ve spojení s kuřecím masem a chutný salát je na světě.</p>
+            <br/>
+            <button class="button"> + </button>
+            <button class="button"> 0 </button>
+            <button class="button"> - </button>
+            <br/>
+        </div>
 
-            <div class="person col-md ">
-                <img src="img/kuřecí řízek Ondráš.jpg " alt=" kuřecí řízek ondráš " />
-                <h5>Kuřecí řízek Ondráš</h5>
-                <p></p>
-            </div>
 
-            <div class="person col-md ">
-                <img src="img/boloňské špagety.jpg " alt=" boloňské špagety " />
-                <h5>Boloňské špagety</h5>
-                <p></p>
-            </div>
-            <h3>Nápoje</h3>
+        <br/>
 
-            <div class="person col-md ">
-                <img src="img/cola.jpg " alt=" cola " />
-                <h5>Coca cola</h5>
-                <p></p>
-            </div>
+        <div class="card-columns col-md bg-info">
+            <br/>
+            <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
 
-            <div class="person col-md ">
-                <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
-                <h5>Coca cola</h5>
-                <p></p>
-            </div>
 
-            <div class="person col-md ">
-                <img src="img/voda.jpg " alt=" voda " />
-                <h5>Dobrá voda</h5>
-                <p></p>
-            </div>
+            <h5>Svíčková na smetaně</h5>
+            <p>Královna mezi českými omáčkami má mnoho tváří, několik možností přípravy, dochucování i variace surovin. Svíčková omáčka na smetaně patří k tradičním svátečním jídlům na české tabuli.</p>
+            <br/>
+            <button class="button"> + </button>
+            <button class="button"> 0 </button>
+            <button class="button"> - </button>
+            <br/>
+        </div>
 
-            <div class="person col-md ">
-                <img src="img/pivo v lahvi.jpg " alt=" pivo " />
-                <h5>Pilsner Urquell</h5>
-                <p></p>
-            </div>
+        <br/>
+        <div class="card-columns col-md bg-info">
+            <br/>
+            <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
 
-            <div class="person col-md ">
-                <img src="img/icecoffe.jpg " alt=" icecoffe " />
-                <h5>Icecoffe</h5>
-                <p></p>
-            </div>
+            <h5>Kuřecí řízek Ondráš</h5>
+            <p>Řízky Ondrášezískaly své pojmenování podle beskydského zbojníka Ondráše, která podle pověstí naháněl hrůzu zámožným pánům v Beskydech.</p>
+            <br/>
+            <button class="button"> + </button>
+            <button class="button"> 0 </button>
+            <button class="button"> - </button>
+            <br/>
+        </div>
+
+        <br/>
+        <div class="card-columns col-md bg-info">
+            <br/>
+            <img src="img/boloňské špagety.jpg" alt=" boloňské špagety " />
+
+
+            <h5>Boloňské špagety</h5>
+            <p></p>
+            <br/>
+            <button> + </button>
+            <button> 0 </button>
+            <button> - </button>
+            <br/>
+        </div>
+
+        <h3>Nápoje</h3>
+
+        <div class="person col-md ">
+            <img src="img/cola.jpg " alt=" cola " />
+            <h5>Coca cola</h5>
+            <p></p>
+        </div>
+
+        <div class="person col-md ">
+            <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
+            <h5>Coca cola</h5>
+            <p></p>
+        </div>
+
+        <div class="person col-md ">
+            <img src="img/voda.jpg " alt=" voda " />
+            <h5>Dobrá voda</h5>
+            <p></p>
+        </div>
+
+        <div class="person col-md ">
+            <img src="img/pivo v lahvi.jpg " alt=" pivo " />
+            <h5>Pilsner Urquell</h5>
+            <p></p>
+        </div>
+
+        <div class="person col-md ">
+            <img src="img/icecoffe.jpg " alt=" icecoffe " />
+            <h5>Icecoffe</h5>
+            <p></p>
+        </div>
     </section>
 
 
