--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -32,7 +32,7 @@
 
 
 
-            <h2> O nás </h2>
+            <h2 style="text-align: center"> O nás </h2>
         </div>
 
     </section>
@@ -41,11 +41,11 @@
     <section class="objednavka bg-info text-dark ">
         <div class=" container ">
 
-            <div class="row ">
-                <h2> Objednávka</h2>
+                <h2 style="text-align: center"> Objednávka</h2>
+                <br/>
             </div>
-            <h3>Jídla</h3>
-
+            <h3 style="text-align: center">Jídla</h3>
+<br/>
 
             <div class="card-columns col-md bg-info">
                 <br/>
@@ -106,37 +106,65 @@
                 <button> - </button>
                 <br/>
             </div>
-            <h3>Nápoje</h3>
+            <br/>
+            <h3 style="text-align: center">Nápoje</h3>
+            <br/>
 
-
-            <div class="person col-md ">
+            <div class="card-columns col-md ">
+                <br/>
                 <img src="img/cola.jpg " alt=" cola " />
                 <h5>Coca cola</h5>
                 <p></p>
             </div>
 
-            <div class="person col-md ">
+            <br/>
+
+            <div class="card-columns col-md ">
+                <br/>
                 <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
                 <h5>Coca cola</h5>
                 <p></p>
+                <br/>
+                <button> + </button>
+                <button> 0 </button>
+                <button> - </button>
+                <br/>
             </div>
-
-            <div class="person col-md ">
+            <br/>
+            <div class="card-columns col-md ">
+                <br/>
                 <img src="img/voda.jpg " alt=" voda " />
                 <h5>Dobrá voda</h5>
                 <p></p>
+                <br/>
+                <button> + </button>
+                <button> 0 </button>
+                <button> - </button>
+                <br/>
             </div>
-
-            <div class="person col-md ">
+            <br/>
+            <div class="card-columns col-md ">
+                <br/>
                 <img src="img/pivo v lahvi.jpg " alt=" pivo " />
                 <h5>Pilsner Urquell</h5>
                 <p></p>
+                <br/>
+                <button> + </button>
+                <button> 0 </button>
+                <button> - </button>
+                <br/>
             </div>
-
-            <div class="person col-md ">
+            <br/>
+            <div class="card-columns col-md ">
+                <br/>
                 <img src="img/icecoffe.jpg " alt=" icecoffe " />
                 <h5>Icecoffe</h5>
                 <p></p>
+                <br/>
+                <button> + </button>
+                <button> 0 </button>
+                <button> - </button>
+                <br/>
             </div>
 
     </section>
