Update Objednej si jídlo.html

--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -115,7 +115,12 @@
                 <br/>
                 <img src="img/cola.jpg " alt=" cola " />
                 <h5>Coca cola</h5>
-                <p></p>
+                <p>2,25 l</p>
+                <br/>
+                <button> + </button>
+                <button> 0 </button>
+                <button> - </button>
+                <br/>
             </div>
 
             <br/>
@@ -124,7 +129,7 @@
                 <br/>
                 <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
                 <h5>Coca cola</h5>
-                <p></p>
+                <p>0,5 l</p>
                 <br/>
                 <button> + </button>
                 <button> 0 </button>
@@ -136,7 +141,7 @@
                 <br/>
                 <img src="img/voda.jpg " alt=" voda " />
                 <h5>Dobrá voda</h5>
-                <p></p>
+                <p>1,5 l</p>
                 <br/>
                 <button> + </button>
                 <button> 0 </button>
@@ -148,7 +153,7 @@
                 <br/>
                 <img src="img/pivo v lahvi.jpg " alt=" pivo " />
                 <h5>Pilsner Urquell</h5>
-                <p></p>
+                <p>0,5 l</p>
                 <br/>
                 <button> + </button>
                 <button> 0 </button>
@@ -160,7 +165,7 @@
                 <br/>
                 <img src="img/icecoffe.jpg " alt=" icecoffe " />
                 <h5>Icecoffe</h5>
-                <p></p>
+                <p>0,5 l</p>
                 <br/>
                 <button> + </button>
                 <button> 0 </button>
