--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -96,7 +96,7 @@
 
 
             <h5>Boloňské špagety</h5>
-            <p></p>
+            <p>Boloňské špagety nebo chcete-li spaghetti bolognese jsou naprosto dokonalé jídlo, které milují děti i dospělí.</p>
             <br/>
             <button> + </button>
             <button> 0 </button>
@@ -136,112 +136,31 @@
             <p></p>
         </div>
 
-        <h2> Objednávka</h2>
-        </div>
-        <h3>Jídla</h3>
 
-
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
-
-
-            <h5>Salát s kuřecím masem</h5>
-            <p>Zelenina ve spojení s kuřecím masem a chutný salát je na světě.</p>
-            <br/>
-            <button class="button"> + </button>
-            <button class="button"> 0 </button>
-            <button class="button"> - </button>
-            <br/>
-        </div>
-
-
-        <br/>
-
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
-
-
-            <h5>Svíčková na smetaně</h5>
-            <p></p>
-            <br/>
-            <button class="button"> + </button>
-            <button class="button"> 0 </button>
-            <button class="button"> - </button>
-            <br/>
-        </div>
-
-        <br/>
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
-
-            <h5>Kuřecí řízek Ondráš</h5>
-            <p></p>
-            <br/>
-            <button class="button"> + </button>
-            <button class="button"> 0 </button>
-            <button class="button"> - </button>
-            <br/>
-        </div>
-
-        <br/>
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/boloňské špagety.jpg" alt=" boloňské špagety " />
-
-
-            <h5>Boloňské špagety</h5>
-            <p></p>
-            <br/>
-            <button> + </button>
-            <button> 0 </button>
-            <button> - </button>
-            <br/>
-        </div>
-        <h3>Nápoje</h3>
-
-
-        <div class="person col-md ">
-            <img src="img/cola.jpg " alt=" cola " />
-            <h5>Coca cola</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
-            <h5>Coca cola</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/voda.jpg " alt=" voda " />
-            <h5>Dobrá voda</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/pivo v lahvi.jpg " alt=" pivo " />
-            <h5>Pilsner Urquell</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/icecoffe.jpg " alt=" icecoffe " />
-            <h5>Icecoffe</h5>
-            <p></p>
-        </div>
-
-        >>>>>>> 9347c877adbec3d05d7a80316d6f9c2bd505fc19
     </section>
 
 
     <a name="kontakty " />
 
-    <section class="kontakty ">
+    <section class="kontakty bg-secondary">
         <div class="container ">
             <h2> Kontakty</h2>
+
+
+            <strong>Adresa</strong>
+            <p>
+                Italská 36<br /> Praha
+                <br /> 120 00
+            </p>
+
+
+
+            <strong>Telefoní číslo</strong>
+            <p>
+                765 789 456
+            </p>
+
+
         </div>
     </section>
 
