--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -7,25 +7,61 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="js/javascript.js"></script>
     <link rel="stylesheet" href="css/style.css">
+
     <title>Objednej si jídlo</title>
 
     <header>
-        <nav class="container navbar fixed-top flex-colum flex-sm-row bg-light">
-            <a href=" #onas ">O nás</a>
-            <a href="#objednavka ">Objednávka</a>
-            <a href="#kontakty ">Kontakty</a>
-            <a href="#kosik ">Košík</a>
 
-        </nav>
+
+        <div class="bd-example">
+            <div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [900x300]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22900%22%20height%3D%22300%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20900%20300%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1742a32ff22%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1742a32ff22%22%3E%3Crect%20width%3D%22900%22%20height%3D%22300%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22308.2890625%22%20y%3D%22170.0015625%22%3EFirst%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                            data-holder-rendered="true">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>restaurace</h5>
+                            <h1>Cara-nar</h1>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22900%22%20height%3D%22300%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20900%20300%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1742a32ff27%20text%20%7B%20fill%3A%23444%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1742a32ff27%22%3E%3Crect%20width%3D%22900%22%20height%3D%22300%22%20fill%3D%22%23666%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22264.9453125%22%20y%3D%22170.0015625%22%3ESecond%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                            data-holder-rendered="true">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>restaurace</h5>
+                            <h1>Cara-nar</h1>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
 
     </header>
 
 </head>
 
 <body>
-    <h5>restaurace</h5>
-    <h1>Cara-nar</h1>
 
+    <nav class="container navbar  flex-colum flex-sm-row bg-light">
+        <a href="#onas ">O nás</a>
+        <a href="#objednavka ">Objednávka</a>
+        <a href="#kontakty ">Kontakty</a>
+        <a href="#kosik ">Košík</a>
+
+    </nav>
     <a name="onas " />
     <section class="onas bg-info text-dark ">
         <div class="container ">
@@ -41,108 +77,134 @@
     <section class="objednavka bg-info text-dark ">
         <div class=" container ">
 
-            <h2> Objednávka</h2>
-        </div>
-        <h3>Jídla</h3>
-        <div class="card-columns col-md bg-info">
+            <h2 style="text-align: center"> Objednávka</h2>
+            <h3 style="text-align: center">Jídla</h3>
+            <div class="card-columns col-md bg-info">
+                <br/>
+                <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
+
+
+                <h5>Salát s kuřecím masem</h5>
+                <p>Zelenina ve spojení s kuřecím masem a chutný salát je na světě.</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+            </div>
+
+
             <br/>
-            <img src="img/salát s kuřecím masem.jpg" alt=" salát s kuřecím masem " />
+
+            <div class="card-columns col-md bg-info">
+                <br/>
+                <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
 
 
-            <h5>Salát s kuřecím masem</h5>
-            <p>Zelenina ve spojení s kuřecím masem a chutný salát je na světě.</p>
+                <h5>Svíčková na smetaně</h5>
+                <p>Královna mezi českými omáčkami má mnoho tváří, několik možností přípravy, dochucování i variace surovin. Svíčková omáčka na smetaně patří k tradičním svátečním jídlům na české tabuli.</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+            </div>
+
             <br/>
-            <button class="button"> + </button>
-            <button class="button"> 0 </button>
-            <button class="button"> - </button>
+            <div class="card-columns col-md bg-info">
+                <br/>
+                <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
+
+                <h5>Kuřecí řízek Ondráš</h5>
+                <p>Řízky Ondrášezískaly své pojmenování podle beskydského zbojníka Ondráše, která podle pověstí naháněl hrůzu zámožným pánům v Beskydech.</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+            </div>
+
             <br/>
-        </div>
+
+            <div class="card-columns col-md bg-info">
+                <br/>
+                <img src="img/boloňské špagety.jpg" alt=" boloňské špagety " />
 
 
+                <h5>Boloňské špagety</h5>
+                <p>Boloňské špagety nebo chcete-li spaghetti bolognese jsou naprosto dokonalé jídlo, které milují děti i dospělí.</p>
+                <br/>
+                <button> + </button>
+                <button> 0 </button>
+                <button> - </button>
+                <br/>
+            </div>
+
+
+            <h3 style="text-align: center">Nápoje</h3>
         <br/>
-
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/svickova-na-smetane.jpg" alt=" svíčková na smetaně " />
-
-
-            <h5>Svíčková na smetaně</h5>
-            <p>Královna mezi českými omáčkami má mnoho tváří, několik možností přípravy, dochucování i variace surovin. Svíčková omáčka na smetaně patří k tradičním svátečním jídlům na české tabuli.</p>
-            <br/>
-            <button class="button"> + </button>
-            <button class="button"> 0 </button>
-            <button class="button"> - </button>
-            <br/>
-        </div>
-
-        <br/>
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
-
-            <h5>Kuřecí řízek Ondráš</h5>
-            <p>Řízky Ondrášezískaly své pojmenování podle beskydského zbojníka Ondráše, která podle pověstí naháněl hrůzu zámožným pánům v Beskydech.</p>
-            <br/>
-            <button class="button"> + </button>
-            <button class="button"> 0 </button>
-            <button class="button"> - </button>
-            <br/>
-        </div>
-
-        <br/>
-        <div class="card-columns col-md bg-info">
-            <br/>
-            <img src="img/boloňské špagety.jpg" alt=" boloňské špagety " />
-
-
-            <h5>Boloňské špagety</h5>
-            <p>Boloňské špagety nebo chcete-li spaghetti bolognese jsou naprosto dokonalé jídlo, které milují děti i dospělí.</p>
-            <br/>
-            <button> + </button>
-            <button> 0 </button>
-            <button> - </button>
-            <br/>
-
-        </div>
-
-        <h3>Nápoje</h3>
-
-        <div class="person col-md ">
-            <img src="img/cola.jpg " alt=" cola " />
-            <h5>Coca cola</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
-            <h5>Coca cola</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/voda.jpg " alt=" voda " />
-            <h5>Dobrá voda</h5>
-            <p></p>
-        </div>
-
-        <div class="person col-md ">
-            <img src="img/pivo v lahvi.jpg " alt=" pivo " />
-            <h5>Pilsner Urquell</h5>
-            <p></p>
-        </div>
-
         <div class="card-columns col-md ">
             <br/>
-            <img src="img/icecoffe.jpg " alt=" icecoffe " />
-            <h5>Icecoffe</h5>
-            <p>0,5 l</p>
-            <br/>
-            <button> + </button>
-            <button> 0 </button>
-            <button> - </button>
-            <br/>
-        </div>
+                <img src="img/cola.jpg " alt=" cola " />
+                <h5>Coca cola</h5>
+                <p></p>
+                <p>2,25 l</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+            </div>
 
+            <br/>
+            <div class="card-columns col-md ">
+                <br/>
+                <img src="img/cola v plechovce.jpg " alt=" cola v plechovce " />
+                <h5>Coca cola</h5>
+                <p>0,5 l</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+            </div>
+            <br/>
+            <div class="card-columns col-md">
+                <br/>
+                <img src="img/voda.jpg " alt=" voda " />
+                <h5>Dobrá voda</h5>
+                <p>1,5 l</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+            </div>
+            <br/>
+            <div class="card-columns col-md">
+                <br/>
+                <img src="img/pivo v lahvi.jpg " alt=" pivo " />
+                <h5>Pilsner Urquell</h5>
+                <p>0,5 l</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+    
+            </div>
+            <br/>
+            <div class="card-columns col-md">
+                <br/>
+                <img src="img/icecoffe.jpg" alt=" icecoffe " />
+                <h5>Icecoffe</h5>
+                <p>0,5 l</p>
+                <br/>
+                <button class="button"> + </button>
+                <button class="button"> 0 </button>
+                <button class="button"> - </button>
+                <br/>
+    
+            </div>
 
     </section>
 
