Update Objednej si jídlo.html

--- a/Objednej si jídlo.html
+++ b/Objednej si jídlo.html
@@ -51,7 +51,7 @@
 
 <style>
 body {
-  background-image: url("img/pozadi12.jpg");
+  background-image: url("img/pozadi.jpg");
   background-repeat: repeat;
 }
 </style> 
