--- a/index.html
+++ b/index.html
@@ -10,27 +10,6 @@
     
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#onas">O Nás</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#objednavka">Objednávka</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#kontakty">Kontakty</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-
-
         <div class="bd-example">
             <div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -68,6 +47,26 @@
         </div>
 
 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#objednavka">Objednávka</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#onas">O Nás</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#kosik">Košík</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#kontakty">Kontakty</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
     </header>
 
 <style>
@@ -78,12 +77,6 @@ body {
 </style> 
 </head>
 <body>
-
-    <nav class="container navbar  flex-colum flex-sm-row bg-light">
-        <a href="#onas ">O nás</a>
-        <a href="#objednavka ">Objednávka</a>
-        <a href="#kontakty ">Kontakty</a>
-        <a href="#kosik ">Košík</a>
 
     </nav>
     <a name="onas " />
