--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                   <a class="nav-link" href="#kosik">Košík</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#kontakty">Kontakty</a>
-                </li>
+                    <a class="nav-link" href="#kontakty">Kontakty</a>
+                  </li>
               </ul>
             </div>
           </nav>
@@ -236,7 +236,7 @@ body {
     </section>
 
         
-    <a name="kontakty">
+    <a name="kontakty"></a>
 
     <section class="kontakty bg-secondary">
         <div class="container ">
