--- a/index.html
+++ b/index.html
@@ -46,23 +46,22 @@
             </div>
         </div>
 
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed-top  navbar-expand-lg navbar-light bg-light nav-tabs">
             <a class="navbar-brand" href="#objednavka">Objednávka</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#onas">O Nás</a>
+            <div class="collapse navbar-collapse" id="navbarText">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#onas">O nás<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#kosik">Košík</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#kontakty">Kontakty</a>
-                  </li>
+                  <a class="nav-link" href="#kontakty">Kontakty</a>
+                </li>
               </ul>
             </div>
           </nav>
