--- a/index.html
+++ b/index.html
@@ -46,25 +46,24 @@
             </div>
         </div>
 
-        <nav class="navbar fixed-top  navbar-expand-lg navbar-light bg-light nav-tabs">
-            <a class="navbar-brand" href="#objednavka">Objednávka</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#onas">O nás<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#kosik">Košík</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#kontakty">Kontakty</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+        <!-- Top navigation -->
+<div class="topnav">
+
+    <!-- Centered link -->
+    <div class="topnav-centered">
+      <a href="#objednavka" class="active">Objednávka</a>
+    </div>
+  
+    <!-- Left-aligned links (default) -->
+    <a href="#onas">O nás</a>
+    <a href="#kontakty">Kontakty</a>
+  
+    <!-- Right-aligned links -->
+    <div class="topnav-right">
+      <a href="#kosik">Košík</a>
+    </div>
+  
+  </div>
 
     </header>
 
