--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="restaurace1" src="img/restaurace.jpg"
+                        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="restaurace1" src="img/Restaurace 4.jpg"
                             data-holder-rendered="true">
 
                         <div class="carousel-caption d-none d-md-block">
@@ -165,6 +165,8 @@ body {
                 <p></p>
                 <p>2,25 l</p>
                 <br/>
+                <h6>37.90 Kč</h6>
+                <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
                 <button class="button" onclick="clickCounterPlus()"> + </button>
@@ -178,6 +180,8 @@ body {
                 <h5>Coca cola</h5>
                 <p>0,5 l</p>
                 <br/>
+                <h6>15.90 Kč</h6>
+                <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
                 <button class="button" onclick="clickCounterPlus()"> + </button>
@@ -188,6 +192,8 @@ body {
                 <img src="img/voda.jpg " alt=" voda " />
                 <h5>Dobrá voda</h5>
                 <p>1,5 l</p>
+                <br/>
+                <h6>11.90 Kč</h6>
                 <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
@@ -201,6 +207,8 @@ body {
                 <h5>Pilsner Urquell</h5>
                 <p>0,5 l</p>
                 <br/>
+                <h6>27.90 Kč</h6>
+                <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
                 <button class="button" onclick="clickCounterPlus()"> + </button>
@@ -213,6 +221,8 @@ body {
                 <img src="img/icecoffe.jpg" alt=" icecoffe " />
                 <h5>Icecoffe</h5>
                 <p>0,5 l</p>
+                <br/>
+                <h6>24.90 Kč</h6>
                 <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
