--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ body {
 
 
                 <h5>Salát s kuřecím masem</h5>
-                <p>Zelenina ve spojení s kuřecím masem a chutný salát je na světě.</p>
+                <p>200g zelenina ve spojení s kuřecím masem a chutný salát je na světě</p>
+                <h6>95.00 Kč</h6>
                 <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
@@ -118,7 +119,8 @@ body {
 
 
                 <h5>Svíčková na smetaně</h5>
-                <p>Královna mezi českými omáčkami má mnoho tváří, několik možností přípravy, dochucování i variace surovin. Svíčková omáčka na smetaně patří k tradičním svátečním jídlům na české tabuli.</p>
+                <p>220g královna mezi českými omáčkami má mnoho tváří, dochucování i variace surovin, svíčková omáčka na smetaně patří k tradičním svátečním jídlům na české tabuli</p>
+                <h6>120.00 Kč</h6>
                 <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
@@ -132,7 +134,8 @@ body {
                 <img src="img/kuřecí řízek Ondráš.jpg" alt=" kuřecí řízek ondráš " />
 
                 <h5>Kuřecí řízek Ondráš</h5>
-                <p>Řízky Ondrášezískaly své pojmenování podle beskydského zbojníka Ondráše, která podle pověstí naháněl hrůzu zámožným pánům v Beskydech.</p>
+                <p>200g řízky Ondráše získaly své pojmenování podle beskydského zbojníka Ondráše, která podle pověstí naháněl hrůzu zámožným pánům v Beskydech</p>
+                <h6>99.00 Kč</h6>
                 <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
@@ -148,7 +151,8 @@ body {
 
 
                 <h5>Boloňské špagety</h5>
-                <p>Boloňské špagety nebo chcete-li spaghetti bolognese jsou naprosto dokonalé jídlo, které milují děti i dospělí.</p>
+                <p>250g boloňské špagety nebo chcete-li spaghetti bolognese jsou naprosto dokonalé jídlo, které milují děti i dospělí</p>
+                <h6>80.00 Kč</h6>
                 <br/>
                 <button class="button" onclick="clickCounterMinus()"> - </button>
                 <button class="button" > <div id="result"></div> </button>
