--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {
     <section class="onas text-dark ">
         <div class="container ">
             <h2 style="text-align: center"> O nás </h2>
-            <p>S dobrým jídlem je den vždycky příjemnější. Rychlý oběd do práce, malou svačinu mezi přednáškami i slavnostní večeři vám doručíme po celé Praze. Objevte kouzlo rozmanitých chutí světové kuchyně. Chuťovky i celé menu vám dovezeme až ke dveřím. Rychle a bez rezervací. Neustále pro vás hledáme ty nejlepší restaurace v okolí, protože kvalitní servis a vaše radost z jídla je pro nás na prvním místě.</p>
+            <p> S dobrým jídlem je den vždycky příjemnější. Rychlý oběd do práce nebo večeři vám doručíme po celé Praze. Objevte kouzlo chutí naší kuchyně. Jídlo je vždy čerstvé a připraveno z kvalitních surovin. Chuťovky vám dovezeme až ke dveřím. Rychle a bez rezervací, protože kvalitní servis a vaše radost z jídla je pro nás na prvním místě.</p>
         </div>
 
     </section>
